--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = /usr/bin
+home = /usr
+implementation = CPython
+version_info = 3.5.2.final.0
+virtualenv = 20.0.17
 include-system-site-packages = false
-version = 3.6.8
+base-prefix = /usr
+base-exec-prefix = /usr
+base-executable = /usr/bin/python3
